made reports, post pages dynamic, and added api calls for them, as well as improving model

--- a/final/public/styles/user_account_style.css
+++ b/final/public/styles/user_account_style.css
@@ -10,7 +10,8 @@
 }
 
 #leftSideAccountPage img {
-    width: 70%;
+    width: 15em;
+    height: 15em;
     min-width: 32px;
     display: block;
     margin-top: 5%;
