--- a/final/views/homepage.hbs
+++ b/final/views/homepage.hbs
@@ -105,9 +105,9 @@
 					<br>Post not found
 			</div>
 	</div>
-	<script type="text/javascript" src="/scripts/forum.js"></script>
+	<script type="text/javascript" src="/js/forum.js"></script>
 	<script src="/scripts/main.js"></script>
-	<script type="text/javascript" src="../scripts/user_header.js"></script>
+	<script type="text/javascript" src="/js/user_header.js"></script>
 
 
 
