--- a/final/public/styles/post-main.css
+++ b/final/public/styles/post-main.css
@@ -86,6 +86,8 @@ div.clearFloat {
 	font-size: 13px;
 }
 #gameImg {
+    display: inline-block;
+    height: 20em;
 	width: 100%;
 	max-width: 800px;
 	margin-bottom: 10px;
@@ -106,6 +108,7 @@ div.clearFloat {
 #postDetailsContainer {
 	float: right;
 	width: 65%;
+    height: 65%;
 }
 #postDetails {
 	margin-left: 20px;
