--- a/final/views/partials/header_partial.hbs
+++ b/final/views/partials/header_partial.hbs
@@ -10,7 +10,7 @@
 						<div class="bar"></div>
 					</div>
 					<ul id="topNav_links">
-						<li><a title="Back to home" class="linkAnimate" href="../forum/loggedInForumAdmin.html">Home</a></li>
+						<li><a title="Back to home" class="linkAnimate" href="../home">Home</a></li>
                         <li><a class="linkAnimate" href="#">Go to top</a></li>
 						<li id="loginButtonContainer">
 							<div id="navUser">
@@ -18,7 +18,7 @@
 								<ul id="navUserOptionsList">
 									<li id="navUserName">{{user.name}}</li>
 									<li><a class="linkAnimate" href="/users/{{user.name}}">Profile</a></li>
-									<li><a class="linkAnimate makepost" href="../forum/post/admin-make.html">Make Post</a></li>
+									<li><a class="linkAnimate makepost" href="/post/make">Make Post</a></li>
 									{{#if user.isAdmin}}<li><a class="linkAnimate" href="/reports">Reports</a></li>{{/if}}									
                                     <li><a class="linkAnimate logout" href="/logout">Log Out</a></li>
 								</ul>
