--- a/final/views/post_edit.hbs
+++ b/final/views/post_edit.hbs
@@ -17,8 +17,8 @@
 	<link rel="stylesheet" href="/styles/post-edit.css">
 </head>
 <body>
-    {{> header_partial }} 
-				
+    {{> header_partial }}
+
 	<section id="contents">
 		<div id="threadContainer"><section id="thread">
 			<section id="post-editSection"><form id="post-edit" action="">
@@ -27,9 +27,9 @@
 				<hr>
 				<div id="gameDetailsContainer"><section id="gameDetails">
 					<div id="gameContainer"><section id="game-edit" class="sectionCard">
-						<span id="gameTitle-editLabel" class="editFormInputLabel">Game to Play: </span><input id="gameTitle-edit" class="editFormInput" name="game" value="{{#if isEdit}}{{post.gameTitle}}{{/if}}">
+						<span id="gameTitle-editLabel" class="editFormInputLabel">Game to Play: </span><input id="gameTitle-edit" class="editFormInput" name="game" autocomplete = "off" value="{{#if isEdit}}{{post.gameTitle}}{{/if}}">
 						<div id="gameTitle-editDropdownContainer">
-							
+
 						</div>
 					</section></div>
 					<div id="spaceAvailableContainer"><section id="spaceAvailable" class="sectionCard">
@@ -43,7 +43,7 @@
 				</section></div>
 				<div class="clearFloat"></div>
 				<button id="post-editSubmit">Submit!</button>
-				<div class="clearFloat"></div>	
+				<div class="clearFloat"></div>
 			</section></form>
 		</section></div>
 	</section>
