--- a/final/views/post_view.hbs
+++ b/final/views/post_view.hbs
@@ -22,7 +22,7 @@
 	<section id="contents">
 		<div id="threadContainer"><section id="thread">
 			<section id="post">
-				{{#if user.canEdit}}<div class="userSectionOptionsContainer modifyOptions"><div class="userSectionOptions modifyOptions">
+				{{#if canEdit}}<div class="userSectionOptionsContainer modifyOptions"><div class="userSectionOptions modifyOptions">
 					<svg class="userOptionsSVG modifyOptions" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 18c1.657 0 3 1.343 3 3s-1.343 3-3 3-3-1.343-3-3 1.343-3 3-3zm0-9c1.657 0 3 1.343 3 3s-1.343 3-3 3-3-1.343-3-3 1.343-3 3-3zm0-9c1.657 0 3 1.343 3 3s-1.343 3-3 3-3-1.343-3-3 1.343-3 3-3z"/></svg>
 					<ul class="userSectionOptionsList modifyOptions">
 						<li><a class="edit" href="/post/edit/{{post._id}}">
@@ -62,9 +62,9 @@
 				</section></div>
 				<div id="postDetailsContainer"><section id="postDetails" class="sectionCard">
 					<div id="postDetailsUser" class="sectionCard userSection">
-						<img class="userProfilePic" src="{{post.creatorPicUrl}}" alt="userProfilePic1">
+						<img class="userProfilePic" src="{{post.creator.profilePicUrl}}" alt="userProfilePic1">
 						<div id="postDetailsUserInfo" class="userSectionInfo">
-							<h4 class="userName">{{post.creator}}</h4>
+							<h4 class="userName">{{post.creator.name}}</h4>
 							<span class="postDetailsLabel">Posted: <i>{{post.dateMade}}</i></span>
 						</div>
 					</div>
