--- a/final/views/homepage.hbs
+++ b/final/views/homepage.hbs
@@ -29,19 +29,19 @@
 					</form>
 				</li>
 				<li class ='sideNavList'>
-					<p>Filters</p>
 					<button class="accordion">Game Station</button>
 					<div class="panel">
 						<ul>
 							<li><button class = "accordionButton">XBox One</button></li>
 							<li><button class = "accordionButton">Xbox 360</button></li>
-							<li><button class = "accordionButton">other Xbox</button></li>
-							<li><button class = "accordionButton">PS3</button></li>
 							<li><button class = "accordionButton">PS4</button></li>
+							<li><button class = "accordionButton">PS3</button></li>
+							<li><button class = "accordionButton">PSVita</button></li>
 							<li><button class = "accordionButton">PC</button></li>
-							<li><button class = "accordionButton">Wii</button></li>
-							<li><button class = "accordionButton">WiiU</button></li>
 							<li><button class = "accordionButton">Switch</button></li>
+							<li><button class = "accordionButton">WiiU</button></li>
+							<li><button class = "accordionButton">Wii</button></li>
+							<li><button class = "accordionButton">3DS</button></li>
 						</ul>
 					</div>
 
@@ -68,8 +68,7 @@
 					</div>
 				</li>
 				<li class ='sideNavList'>
-					<p>Sort</p>
-					<button class="accordion">Options</button>
+					<button class="accordion">Sort</button>
 					<div class="panel">
 						<ul>
 							<li><button class = "accordionButton">by Date Posted</button></li>
@@ -82,21 +81,10 @@
 	</nav>
 	<nav id="gamePost">
 <anything to do with homepages>
-		<section class="post">
-			<div class="gameImgIcon">
-				<img src="../resources/images/rayman.jpg" class = "gameImg">
-				<span class= "gameTitle">Rayman Origins</span>
-				<span class= "status">Status: <strong>1/2</strong></span>
-				<span class= "postTitle">Looking for players</span>
-			</div>
-			<div class="gameDetails">
-                <button class ="requestInvite" type="button" name="Request">Joined</button>
-                <a href="../forum/post/admin.html" id="viewPost">View Post</a>
-				<button class ="reportButton" type="button" name="Report">Report</button>
 
 
-			</div>
-		</section>
+
+
 
 	</nav>
 	<div class="dialogContainer" id="postNotFound">
@@ -105,9 +93,8 @@
 					<br>Post not found
 			</div>
 	</div>
+
 	<script type="text/javascript" src="/js/forum.js"></script>
-	<script src="/scripts/main.js"></script>
-	<script type="text/javascript" src="/js/user_header.js"></script>
 
 
 
