added filters for posts

--- a/final/views/homepage.hbs
+++ b/final/views/homepage.hbs
@@ -32,38 +32,38 @@
 					<button class="accordion">Game Station</button>
 					<div class="panel">
 						<ul>
-							<li><button class = "accordionButton">XBox One</button></li>
-							<li><button class = "accordionButton">Xbox 360</button></li>
-							<li><button class = "accordionButton">PS4</button></li>
-							<li><button class = "accordionButton">PS3</button></li>
-							<li><button class = "accordionButton">PSVita</button></li>
-							<li><button class = "accordionButton">PC</button></li>
-							<li><button class = "accordionButton">Switch</button></li>
-							<li><button class = "accordionButton">WiiU</button></li>
-							<li><button class = "accordionButton">Wii</button></li>
-							<li><button class = "accordionButton">3DS</button></li>
+							<li><button class = "accordionButton" value="platform">XBox One</button></li>
+							<li><button class = "accordionButton" value="platform">Xbox 360</button></li>
+							<li><button class = "accordionButton" value="platform">PS4</button></li>
+							<li><button class = "accordionButton" value="platform">PS3</button></li>
+							<li><button class = "accordionButton" value="platform">PSVita</button></li>
+							<li><button class = "accordionButton" value="platform">PC</button></li>
+							<li><button class = "accordionButton" value="platform">Switch</button></li>
+							<li><button class = "accordionButton" value="platform">WiiU</button></li>
+							<li><button class = "accordionButton" value="platform">Wii</button></li>
+							<li><button class = "accordionButton" value="platform">3DS</button></li>
 						</ul>
 					</div>
 
 					<button class="accordion">Number of People</button>
 					<div class="panel">
 						<ul>
-							<li><button class = "accordionButton">2</button></li>
-							<li><button class = "accordionButton">3</button></li>
-							<li><button class = "accordionButton">4</button></li>
-							<li><button class = "accordionButton">5</button></li>
-							<li><button class = "accordionButton">6</button></li>
-							<li><button class = "accordionButton">7+</button></li>
+							<li><button class = "accordionButton" value="people">2</button></li>
+							<li><button class = "accordionButton" value="people">3</button></li>
+							<li><button class = "accordionButton" value="people">4</button></li>
+							<li><button class = "accordionButton" value="people">5</button></li>
+							<li><button class = "accordionButton" value="people">6</button></li>
+							<li><button class = "accordionButton" value="people">7+</button></li>
 						</ul>
 					</div>
 
 					<button class="accordion">Genre</button>
 					<div class="panel">
 						<ul>
-							<li><button class = "accordionButton">MMRPG</button></li>
-							<li><button class = "accordionButton">FPS</button></li>
-							<li><button class = "accordionButton">Racing</button></li>
-							<li><button class = "accordionButton">Strategy</button></li>
+							<li><button class = "accordionButton" value="genre">MMRPG</button></li>
+							<li><button class = "accordionButton" value="genre">FPS</button></li>
+							<li><button class = "accordionButton" value="genre">Racing</button></li>
+							<li><button class = "accordionButton" value="genre">Strategy</button></li>
 						</ul>
 					</div>
 				</li>
@@ -71,8 +71,8 @@
 					<button class="accordion">Sort</button>
 					<div class="panel">
 						<ul>
-							<li><button class = "accordionButton">by Date Posted</button></li>
-							<li><button class = "accordionButton">by Game Name</button></li>
+							<li><button class = "accordionButton" value="sort">by Date Posted</button></li>
+							<li><button class = "accordionButton" value="sort">by Game Name</button></li>
 						</ul>
 					</div>
 				</li>
